--- a/ProjectDwarf/Config/DefaultEngine.ini
+++ b/ProjectDwarf/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
 GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
-GlobalDefaultGameMode="/Script/ProjectDwarf.ProjectDwarfGameMode"
+GlobalDefaultGameMode=/Script/Engine.GameMode
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -48,5 +48,3 @@ MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
-
-
