--- a/ProjectDwarf/Config/DefaultEngine.ini
+++ b/ProjectDwarf/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 [URL]
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
-GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
-GlobalDefaultGameMode=/Script/Engine.GameMode
+EditorStartupMap=/Game/Scenes/TestCam.TestCam
+GameDefaultMap=/Game/Scenes/TestCam.TestCam
+GlobalDefaultGameMode=/Game/Blueprints/GameMode_BP.GameMode_BP_C
+bUseSplitscreen=False
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
