--- a/ProjectDwarf/Config/DefaultEngine.ini
+++ b/ProjectDwarf/Config/DefaultEngine.ini
@@ -1,9 +1,8 @@
 [URL]
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Scenes/TestCam.TestCam
-GameDefaultMap=/Game/Scenes/TestCam.TestCam
-GlobalDefaultGameMode=/Game/Blueprints/GameMode_BP.GameMode_BP_C
-bUseSplitscreen=False
+EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
+GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
+GlobalDefaultGameMode="/Script/ProjectDwarf.ProjectDwarfGameMode"
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -49,3 +48,5 @@ MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
+
+
