--- a/ProjectDwarf/ProjectDwarf.uproject
+++ b/ProjectDwarf/ProjectDwarf.uproject
@@ -7,7 +7,11 @@
 		{
 			"Name": "ProjectDwarf",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine",
+				"AIModule"
+			]
 		}
 	],
 	"Plugins": [
