--- a/ProjectDwarf/Config/DefaultEngine.ini
+++ b/ProjectDwarf/Config/DefaultEngine.ini
@@ -17,6 +17,36 @@ bShowWidgetsFromEngineContent=False
 [/Script/AIModule.AISystem]
 bAllowControllersAsEQSQuerier=True
 
+[/Script/GameplayDebugger.GameplayDebuggerConfig]
+ActivationKey=G
+CategoryRowNextKey=Add
+CategoryRowPrevKey=Subtract
+CategorySlot0=NumPadZero
+CategorySlot1=NumPadOne
+CategorySlot2=NumPadTwo
+CategorySlot3=NumPadThree
+CategorySlot4=NumPadFour
+CategorySlot5=NumPadFive
+CategorySlot6=NumPadSix
+CategorySlot7=NumPadSeven
+CategorySlot8=NumPadEight
+CategorySlot9=NumPadNine
+DebugCanvasPaddingLeft=10.000000
+DebugCanvasPaddingRight=10.000000
+DebugCanvasPaddingTop=10.000000
+DebugCanvasPaddingBottom=10.000000
++Categories=(CategoryName="AI",SlotIdx=1,ActiveInGame=Enable,ActiveInSimulate=Enable,Hidden=UseDefault,bOverrideSlotIdx=False,InputHandlers=)
++Categories=(CategoryName="BehaviorTree",SlotIdx=2,ActiveInGame=Enable,ActiveInSimulate=Enable,Hidden=UseDefault,bOverrideSlotIdx=False,InputHandlers=)
++Categories=(CategoryName="EQS",SlotIdx=-1,ActiveInGame=Enable,ActiveInSimulate=Enable,Hidden=UseDefault,bOverrideSlotIdx=False,InputHandlers=((ConfigName="CycleQueries",Key=Multiply),(ConfigName="ToggleDetails",Key=Divide)))
++Categories=(CategoryName="Navmesh",SlotIdx=0,ActiveInGame=Enable,ActiveInSimulate=Enable,Hidden=UseDefault,bOverrideSlotIdx=False,InputHandlers=)
++Categories=(CategoryName="Perception",SlotIdx=-1,ActiveInGame=Enable,ActiveInSimulate=Enable,Hidden=UseDefault,bOverrideSlotIdx=False,InputHandlers=)
++Categories=(CategoryName="NavGrid",SlotIdx=-1,ActiveInGame=Enable,ActiveInSimulate=Enable,Hidden=UseDefault,bOverrideSlotIdx=False,InputHandlers=)
++Extensions=(ExtensionName="GameHUD",UseExtension=UseDefault,InputHandlers=((ConfigName="ToggleHUD",Key=Tilde,bModCtrl=True),(ConfigName="ToggleMessages",Key=Tab,bModCtrl=True)))
++Extensions=(ExtensionName="Spectator",UseExtension=UseDefault,InputHandlers=((ConfigName="Toggle",Key=Tab)))
+
+[/Script/Engine.RendererSettings]
+r.GenerateMeshDistanceFields=True
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
@@ -55,32 +85,5 @@ MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
-
-[/Script/GameplayDebugger.GameplayDebuggerConfig]
-ActivationKey=G
-CategoryRowNextKey=Add
-CategoryRowPrevKey=Subtract
-CategorySlot0=NumPadZero
-CategorySlot1=NumPadOne
-CategorySlot2=NumPadTwo
-CategorySlot3=NumPadThree
-CategorySlot4=NumPadFour
-CategorySlot5=NumPadFive
-CategorySlot6=NumPadSix
-CategorySlot7=NumPadSeven
-CategorySlot8=NumPadEight
-CategorySlot9=NumPadNine
-DebugCanvasPaddingLeft=10.000000
-DebugCanvasPaddingRight=10.000000
-DebugCanvasPaddingTop=10.000000
-DebugCanvasPaddingBottom=10.000000
-+Categories=(CategoryName="AI",SlotIdx=1,ActiveInGame=Enable,ActiveInSimulate=Enable,Hidden=UseDefault,bOverrideSlotIdx=False,InputHandlers=)
-+Categories=(CategoryName="BehaviorTree",SlotIdx=2,ActiveInGame=Enable,ActiveInSimulate=Enable,Hidden=UseDefault,bOverrideSlotIdx=False,InputHandlers=)
-+Categories=(CategoryName="EQS",SlotIdx=-1,ActiveInGame=Enable,ActiveInSimulate=Enable,Hidden=UseDefault,bOverrideSlotIdx=False,InputHandlers=((ConfigName="CycleQueries",Key=Multiply),(ConfigName="ToggleDetails",Key=Divide)))
-+Categories=(CategoryName="Navmesh",SlotIdx=0,ActiveInGame=Enable,ActiveInSimulate=Enable,Hidden=UseDefault,bOverrideSlotIdx=False,InputHandlers=)
-+Categories=(CategoryName="Perception",SlotIdx=-1,ActiveInGame=Enable,ActiveInSimulate=Enable,Hidden=UseDefault,bOverrideSlotIdx=False,InputHandlers=)
-+Categories=(CategoryName="NavGrid",SlotIdx=-1,ActiveInGame=Enable,ActiveInSimulate=Enable,Hidden=UseDefault,bOverrideSlotIdx=False,InputHandlers=)
-+Extensions=(ExtensionName="GameHUD",UseExtension=UseDefault,InputHandlers=((ConfigName="ToggleHUD",Key=Tilde,bModCtrl=True),(ConfigName="ToggleMessages",Key=Tab,bModCtrl=True)))
-+Extensions=(ExtensionName="Spectator",UseExtension=UseDefault,InputHandlers=((ConfigName="Toggle",Key=Tab)))
 
 
