--- a/ProjectDwarf/Config/DefaultEngine.ini
+++ b/ProjectDwarf/Config/DefaultEngine.ini
@@ -4,6 +4,7 @@ EditorStartupMap=/Game/Scenes/TestCam.TestCam
 GameDefaultMap=/Game/Scenes/TestCam.TestCam
 GlobalDefaultGameMode=/Game/Blueprints/GameMode_BP.GameMode_BP_C
 bUseSplitscreen=False
+bOffsetPlayerGamepadIds=True
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
