--- a/ProjectDwarf/Config/DefaultEngine.ini
+++ b/ProjectDwarf/Config/DefaultEngine.ini
@@ -4,7 +4,7 @@ EditorStartupMap=/Game/Scenes/TestCam.TestCam
 GameDefaultMap=/Game/Scenes/TestCam.TestCam
 GlobalDefaultGameMode=/Game/Blueprints/GameMode_BP.GameMode_BP_C
 bUseSplitscreen=False
-bOffsetPlayerGamepadIds=False
+bOffsetPlayerGamepadIds=True
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -47,6 +47,9 @@ DebugCanvasPaddingBottom=10.000000
 
 [/Script/Engine.RendererSettings]
 r.GenerateMeshDistanceFields=True
+r.MinScreenRadiusForLights=150.000000
+r.MinScreenRadiusForDepthPrepass=150.000000
+r.MinScreenRadiusForCSMDepth=150.000000
 
 [/Script/GameplayDebugger.GameplayDebuggerConfig]
 ActivationKey=G
@@ -115,4 +118,3 @@ MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
-
