--- a/ProjectDwarf/Config/DefaultEngine.ini
+++ b/ProjectDwarf/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [URL]
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Scenes/TestCam.TestCam
-GameDefaultMap=/Game/Scenes/TestCam.TestCam
+GameDefaultMap=/Game/Scenes/TitleScreen.TitleScreen
 GlobalDefaultGameMode=/Game/Blueprints/GameMode_BP.GameMode_BP_C
 bUseSplitscreen=False
 bOffsetPlayerGamepadIds=True
@@ -118,5 +118,4 @@ MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
-
 
